1. options for representation-dependent problem: new W-representation (Lagranian-based Coulomb correction) is added for discussion; 2. information output is explicitly controlled in the configure file; 3. too-close-to-core situation is raised, which may cause high-order term which spoil the spectra; one can control the radius-threshold to discard trajectories which are too close to the core, to somewhat alleviate the rampant artificial higher-order caustics, and to significantly speed up the computation

--- a/Makefile.cfg
+++ b/Makefile.cfg
@@ -3,11 +3,18 @@ DIR_MAIN	= src/ccsfa
 EXE_NAME	= test
 
 PARALLEL	= 0
-#FC		= /usr/local/Packages/mvapich2-tcp-intel-1.2rc2/bin/mpif90
-FC		= ifort
 
+# Fotran compiler
+ifeq ($(PARALLEL), 1) # parallel version
+FC		= /usr/local/Packages/mvapich2-tcp-intel-1.2rc2/bin/mpif90	
+else		      # standalone version
+FC		= ifort	
+endif
+
+# compile options
 FC_FLAGS	= -g
 INCLUDE		=
+# link options
 LK_FLAGS	=
 LIB_DIR		=
 LIBS		=
