--- a/parameter.cfg
+++ b/parameter.cfg
@@ -1,7 +1,8 @@
+# Configurations
 
 [GRID]
-n_px = 1000  
-n_pz = 2000 
+n_px = 2000  
+n_pz = 4000 
 pz_begin = -2.0
 pz_end = 2.0
 px_begin = -1.0
@@ -9,32 +10,33 @@ px_end = 1.0
 
 [FIELD]
 E0 = 0.0534
-om = 0.0228
+om = 0.0227817
 nc = 3
 xi = 0.0
-ph = 0.5
+ph = 0.0
 
 
 [ATOM]
-Ip     = 0.579
+Ip     = 0.5
 charge = 1.0
-#charge = 0.0 
 
 [TS_GUESS]
 auto = true
 ts_max   = 40
-grid_re  = 480
-grid_im  = 40 
+grid_re  = 160
+grid_im  = 60 
 re_lower = 0.0
 re_upper = 
-im_lower = 4.0
+im_lower = 2.0
 im_upper = 150.0
 
 [RK4]
-nt = 600
+nt = 800
 ne = 4
 nmax = 640000
 eps = 1e-8
+r_threshold = 1.0
 
 [MISC]
+representation = S
 plot = 1
