--- a/parameter.cfg
+++ b/parameter.cfg
@@ -35,8 +35,9 @@ nt = 800
 ne = 4
 nmax = 640000
 eps = 1e-8
-r_threshold = 1.0
+r_threshold = 4.0
 
 [MISC]
 representation = S
 plot = 1
+print = 0
