Simplification of the whole program

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -10,10 +10,6 @@ SRC	= \
 	rk4_plot.f90 \
 	crf.f90 \
 	find_root.f90 \
-	pulse.f90 \
-	pulse_ramp.f90 \
-	pulse_const.f90 \
-	pulse_sin2_old.f90 \
 	im_propagation.f90 \
 	spline.f90 \
 	action_bak.f90 \
@@ -22,23 +18,29 @@ SRC	= \
 	sub_cc.f90 \
 	propagate.f90
 
-FC_FLAGS	+= -fpp
+OBJ	= $(SRC:.f90=.o)
+
+DIR_PULSE	=	./pulse
+FC_FLAGS	+=	-fpp 
+INCLUDE	+=	-I$(DIR_PULSE)
+
 
 
 %.o : %.f90
-	$(FC) $(FC_FLAGS) $< -c -o $*.o 
+	$(FC) $(FC_FLAGS) $(INCLUDE)  $< -c -o $*.o 
 
 %.o : %.f
-	$(FC) $(FC_FLAGS) $< -c -o $*.o 
+	$(FC) $(FC_FLAGS) $(INCLUDE) $< -c -o $*.o 
 
-OBJ	= $(SRC:.f90=.o)
+all: build
 
+build: build_pulse $(OBJ)
 
-all: clean build
-
-build: $(OBJ)
+build_pulse:
+	cd $(DIR_PULSE) && $(MAKE) build
 
 clean:
+	cd $(DIR_PULSE) && $(MAKE) $@
 	rm -rf ./*.o 
 	rm -rf *.mod 
 	rm -rf *~
