Remove the un-used INCLUDE path in Makefile of 'subbr', avoiding the warning information #10147 for ifort.

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -17,9 +17,9 @@ SRC	= \
 
 OBJ	= $(SRC:.f90=.o)
 
-SUBDIRS		=	./pulse ./subbr 
+SUBDIRS		=	./subbr 
 FC_FLAGS		+=	-fpp 
-INCLUDE		+=	-I./pulse -I./subbr
+INCLUDE		+=	-I./subbr
 
 %.o : %.f90
 	$(FC) $(FC_FLAGS) $(INCLUDE)  $< -c -o $*.o 
