--- a/src/core/subbr/Makefile
+++ b/src/core/subbr/Makefile
@@ -2,9 +2,11 @@ DIR_ROOT = ../../..
 include $(DIR_ROOT)/Makefile.cfg
 
 SRC	= \
+	sub_p0.f90 \
 	sub_integrate.f90 \
 	sub_traj_ptb_1.f90 \
-	sub_cc.f90
+	sub_cc.f90 \
+	sub_action_0.f90
 
 OBJ	= $(SRC:.f90=.o)
 
