--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -10,9 +10,11 @@ OUT			=	$(DIR_ROOT)/$(EXE_NAME)
 DIR_CORE		= 	../core
 DIR_PULSE		=	$(DIR_CORE)/pulse
 DIR_SUBBR	=	$(DIR_CORE)/subbr
+DIR_SUBBR_PTB	=	$(DIR_SUBBR)/ptb
+DIR_SUBBR_BKW	=	$(DIR_SUBBR)/bkw
 
 FC_FLAGS	+= 	-fpp
-INCLUDE	+= 	-I. -I$(DIR_CORE) -I$(DIR_PULSE) -I$(DIR_SUBBR)
+INCLUDE	+= 	
 LIBS		+=
 LK_FLAGS	+= 	#-m64 
 
@@ -23,7 +25,8 @@ LK_FLAGS	+= 	#-m64
 	$(FC) $(FC_FLAGS) $(INCLUDE) $< -c -o $@ 
 
 OBJ_ENTRY	=	$(SRC:.f90=.o)
-OBJ_CORE		+=	$(DIR_CORE)/*.o $(DIR_SUBBR)/*.o $(DIR_PULSE)/*.o
+OBJ_CORE		+=	$(DIR_CORE)/*.o $(DIR_SUBBR)/*.o $(DIR_PULSE)/*.o \
+	$(DIR_SUBBR_PTB)/*.o #$(DIR_SUBBR_BKW)/*.o
 
 all: build
 
