--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -12,6 +12,7 @@ DIR_PULSE		=	$(DIR_CORE)/pulse
 DIR_SUBBR	=	$(DIR_CORE)/subbr
 DIR_SUBBR_PTB	=	$(DIR_SUBBR)/ptb
 DIR_SUBBR_BKW	=	$(DIR_SUBBR)/bkw
+DIR_SUBBR_BKW_EPS	=	$(DIR_SUBBR)/bkw_eps
 
 FC_FLAGS	+= 	-fpp
 INCLUDE	+= 	
@@ -26,7 +27,7 @@ LK_FLAGS	+= 	#-m64
 
 OBJ_ENTRY	=	$(SRC:.f90=.o)
 OBJ_CORE		+=	$(DIR_CORE)/*.o $(DIR_SUBBR)/*.o $(DIR_PULSE)/*.o \
-	$(DIR_SUBBR_PTB)/*.o $(DIR_SUBBR_BKW)/*.o
+	$(DIR_SUBBR_PTB)/*.o $(DIR_SUBBR_BKW)/*.o $(DIR_SUBBR_BKW_EPS)/*.o
 
 all: build
 
