--- a/parameter.cfg
+++ b/parameter.cfg
@@ -60,10 +60,10 @@ px_end = 1.0
 # pls check pulse.f90, may have been overwritten
 E0 = 0.0534
 om = 0.0228
-nc = 3.0
+nc = 9.0
 xi = 0.0
 ph = 0.0
-envelope = sin2
+envelope = const
 
 [ATOM]
 #Ip = 0.448
